# micronos

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  set_env.bat  set_env.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/micronos-core/: Cargo.toml  README.md
crates/micronos-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/micronos-drivers/: Cargo.toml
crates/micronos-drivers/src/: device.rs  driver.rs  lib.rs  manager.rs
crates/micronos-fs/: Cargo.toml  README.md
crates/micronos-fs/src/: lib.rs  storage.rs  vfs.rs
crates/micronos-kernel/: Cargo.toml  README.md
crates/micronos-kernel/src/: boot.rs  kernel.rs  lib.rs  scheduler.rs
crates/micronos-kernel/src/events/: mod.rs
crates/micronos-kernel/src/posix/: mod.rs
crates/micronos-kernel/src/syscall/: handlers.rs  mod.rs
crates/micronos-net/: Cargo.toml  README.md
crates/micronos-net/src/: antenna.rs  lib.rs  network_tools.rs  p2p.rs
crates/micronos-net/src/network_stack/: mod.rs  protocol.rs  socket.rs  tcp.rs  udp.rs
crates/micronos-services/: Cargo.toml  README.md
crates/micronos-services/src/: config.rs  health_monitor.rs  ipc.rs  lib.rs  logger.rs  memory.rs  process_manager.rs  service_registry.rs  signals.rs  stats.rs  timer.rs
docs/: GUIDA_ITALIANA.md
micronos-bin/: Cargo.toml
micronos-bin/src/: lib.rs  main.rs  shell.rs
micronos-bin/tests/: integration_core.rs  integration_fs.rs  integration_kernel.rs  integration_net.rs  integration_services.rs
