[package]
name = "micronos-core"
version.workspace = true
authors.workspace = true
description = "Core types and traits for MicronOS"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
no_std = []

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true
tempfile.workspace = true
