[package]
name = "micronos-kernel"
version.workspace = true
authors.workspace = true
description = "Kernel implementation for MicronOS"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
micronos-core = { path = "../micronos-core" }
spin.workspace = true

[dev-dependencies]
tokio.workspace = true
